RbA Build/src/objects/Business_Adjustment__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>8</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The customer that is related to this business adjustment.</description>
        <inlineHelpText>The customer that is related to this business adjustment.</inlineHelpText>
        <label>Contact</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.RecordTypeId</field>
                <operation>equals</operation>
                <value>Customer Contacts</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Business Adjustments</relationshipLabel>
        <relationshipName>Business_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Order</label>
        <referenceTo>Order</referenceTo>
        <relationshipLabel>Business Adjustments</relationshipLabel>
        <relationshipName>Business_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Pivotal_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>Pivotal Id</label>
        <length>40</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sent_to_Baan_Date__c</fullName>
        <label>Sent to Baan Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Store_Location__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Store Location</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Business Adjustments</relationshipLabel>
        <relationshipName>Business_Adjustments</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <picklist>
            <picklistValues>
                <fullName>AR write-off</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Install Adjustment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Non-sufficient Funds</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Business Adjustment</label>
    <nameField>
        <displayFormat>BA-{000000}</displayFormat>
        <label>Business Adjustment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Business Adjustments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>LockedServiceRequest</fullName>
        <active>true</active>
        <description>If Service Request is Locked (Status = Warranty Submitted, Warranty Accepted, Warranty Rejected, or Closed) users  may not edit</description>
        <errorConditionFormula>Order__r.Lock_Service_Request__c &amp;&amp; (CreatedDate != NOW())</errorConditionFormula>
        <errorMessage>The related Service Request is currently locked, you may not edit any Business Adjustments</errorMessage>
    </validationRules>
</CustomObject>